"Bone groups" not reflect current selection untill change active group #63617

Closed
opened 2019-04-15 04:58:51 +02:00 by takeshi funahashi · 7 comments

System Information
Operating system: Windows-10-10.0.17134 64 Bits
Graphics card: GeForce GTX 980 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 419.67

Blender Version
Broken: version: 2.80 (sub 55), branch: master, commit date: 2019-04-10 15:33, hash: a3b88c9172
Worked: (optional)

Short description of error
When assign Bone groups for armature, not reflect current selection of "Select" and "Deselect"
in Property editor> Object data (In Pose mode)>Bone groups section

Exact steps for others to reproduce the error
1 Open new scene. add human-meta rig. Select rig, then change to pose mode.
2 Select some bones, and In property editor>Object data, Create group 1, assign current selected bones.
3 Clear bone selection , and select another bones. , then Create group 2, assign current selected bones
4 Clear bone selection. in property editor> Object data> Bone Groups section, active "Group1"
5 click "Select" . it not change current bone selection. (Group1 bones are not selected)
6 change active group as group2 , Group1 bones selected.

It happen about "Deselect" too.

**System Information** Operating system: Windows-10-10.0.17134 64 Bits Graphics card: GeForce GTX 980 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 419.67 **Blender Version** Broken: version: 2.80 (sub 55), branch: master, commit date: 2019-04-10 15:33, hash: `a3b88c9172` Worked: (optional) **Short description of error** When assign Bone groups for armature, not reflect current selection of "Select" and "Deselect" in Property editor> Object data (In Pose mode)>Bone groups section **Exact steps for others to reproduce the error** 1 Open new scene. add human-meta rig. Select rig, then change to pose mode. 2 Select some bones, and In property editor>Object data, Create group 1, assign current selected bones. 3 Clear bone selection , and select another bones. , then Create group 2, assign current selected bones 4 Clear bone selection. in property editor> Object data> Bone Groups section, active "Group1" 5 click "Select" . it not change current bone selection. (Group1 bones are not selected) 6 change active group as group2 , Group1 bones selected. It happen about "Deselect" too.

Added subscriber: @TakeshiFunahashi

Added subscriber: @TakeshiFunahashi
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Philipp Oeser self-assigned this 2019-04-16 11:57:42 +02:00
Member

Confirmed, checking...

Confirmed, checking...

This issue was referenced by 11175eb8a8

This issue was referenced by 11175eb8a8422e37ac1e2646b49cfbfdf6f758e4

Added subscriber: @philipp-14

Added subscriber: @philipp-14

@philipp-14 Really thanks quick revison

@philipp-14 Really thanks quick revison
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#63617
No description provided.