Fix T63617: Bone groups (de)select operators not immediately refreshing

was missing DEG updates

Reviewers: brecht

Maniphest Tasks: T63617

Differential Revision: https://developer.blender.org/D4691